# Jack-Compiler

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: main.cpp
src/CompilationEngine/: CompilationEngine.cpp  CompilationEngine.cpp~  CompilationEngine.hpp
src/JackTokenizer/: JackTokenizer.cpp  JackTokenizer.hpp  test.cpp  test.hpp
src/SymbolTable/: SymbolTable.cpp  SymbolTable.hpp
src/VMWriter/: VMWriter.cpp  VMWriter.hpp
tests/Average/: Main.jack
tests/Average/output/: Main.jack.vm
tests/ComplexArrays/output/: Main.jack.vm
tests/ConvertToBin/output/: Main.jack.vm
tests/Pong/output/: Ball.jack.vm  Bat.jack.vm  PongGame.jack.vm
tests/Seven/output/: Main.jack.vm
tests/Square/output/: Square.jack.vm  SquareGame.jack.vm
